test/integration/case-projects/syntax-errors/Main.elm
module Main exposing (..)

hello: world
I am a broken Elm module
